<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:gravity="center"
    android:layout_marginLeft="48dip"
    android:layout_marginRight="48dip">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/register_civ_userhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="setHeadImg"
            android:src="@mipmap/ellipse"
            android:layout_centerInParent="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_text_head"
            android:textColor="@android:color/white"
            android:textSize="44px"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <View android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="22dip"
        android:background="@color/login_textcolorhint_gray"/>
    <EditText
        android:id="@+id/register_edt_setusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:textSize="44px"
        android:background="@color/common_bg_white"
        android:drawableBottom="@drawable/login_bottom_line"
        android:paddingLeft="3dip"
        android:paddingRight="3dip"
        android:drawablePadding="22dip"
        android:gravity="center"
        android:hint="@string/register_hint_setuname"
        android:textCursorDrawable="@drawable/textcusor_drawable"
        android:textColor="@color/login_textcolor_gray"
        android:textColorHint="@color/login_textcolorhint_gray"
        android:maxLines="1"
        android:maxLength="20"
        android:minEms="3"
        android:layout_marginBottom="11dip"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dip"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="34px"
            android:textColor="@color/forgetpwd_text_color"
            android:text="@string/register_text_notify1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="34px"
            android:textColor="@android:color/black"
            android:text="@string/register_text_notify2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="34px"
            android:textColor="@color/forgetpwd_text_color"
            android:text="@string/register_text_notify3"/>
    </LinearLayout>
    <TableRow
        android:gravity="center">
        <Button
            android:id="@+id/register_btn_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="50dip"
            android:paddingLeft="50dip"
            android:paddingTop="14dip"
            android:paddingBottom="14dip"
            android:text="@string/register_text_complete"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:onClick="onComplete"
            android:background="@mipmap/round_rectangle"/>

    </TableRow>
</TableLayout>