<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/label_bg">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dip"
    android:textColor="@color/common_green"
    android:textSize="18dp"
    android:text="@string/label_text"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="29.5dip"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20.5dip"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/add_defined_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/label_add"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_text_hint"
            android:layout_marginLeft="22.5dip"
            android:textSize="15dp"
            android:textColor="@color/label_hint_color"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/common_bg_white"
        android:layout_marginTop="20.5dip"/>

        <ListView
            android:id="@+id/lable_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="0dip"
            android:divider="@null"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/common_bg_white"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12.5dip"
            android:layout_marginBottom="12.5dip"
            android:textColor="@color/lable_cancel_color"
            android:textSize="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/label_cancel_text"/>
        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/common_bg_white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12.5dip"
            android:layout_marginBottom="12.5dip"
            android:textColor="@color/common_green"
            android:textSize="16dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/label_confirm_text"/>
    </LinearLayout>

</LinearLayout>