<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.rideread.rideread.widget.RegisterToolBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:leftArrowIcon="@mipmap/left_arrow"
        android:elevation="3dip"
        app:isShowTitle="true"
        app:title="@string/register_text_setuname"
        >

    </com.rideread.rideread.widget.RegisterToolBar>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginLeft="45dip"
        android:layout_marginRight="45dip"
        android:layout_marginTop="25dip"
        android:layout_weight="1">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/register_civ_userhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="100dip"
            android:onClick="setHeadImg"
            android:minWidth="100dip"
            android:src="@mipmap/me"
            />
        <EditText
            android:id="@+id/register_edt_setusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:minHeight="45dip"
            android:textSize="18sp"
            android:background="@null"
            android:drawableBottom="@drawable/login_bottom_line"
            android:paddingLeft="3dip"
            android:paddingRight="3dip"
            android:hint="@string/register_hint_setuname"
            android:textCursorDrawable="@null"
            android:textColor="@color/login_textcolor_gray"
            android:maxLines="1"
            android:maxLength="20"
            android:minEms="3"
            android:layout_marginBottom="15dip"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:text="@string/register_text_notify1"/>
       <TableRow>
           <View android:layout_weight="1"/>
           <Button
               android:id="@+id/register_btn_complete"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:text="@string/register_text_complete"
               android:textColor="@android:color/white"
               android:layout_marginTop="30dip"
               android:textSize="22sp"
               android:onClick="onComplete"
               android:background="@drawable/login_btn_style_selector"/>

           <View android:layout_weight="1"/>
       </TableRow>
    </TableLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        />

</LinearLayout>
