<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_marginLeft="49dip"
    android:layout_marginRight="49dip"

    android:layout_weight="1">
    <TextView
        android:id="@+id/setpwd_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/forgetpwd_text_color"
        android:gravity="center"
        android:textSize="44px"
        android:text="@string/register_text_setpwd"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/login_textcolorhint_gray"
        android:layout_marginTop="15dip"
        android:layout_marginBottom="20dip"/>
    <EditText
        android:id="@+id/register_edt_setpwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="44px"
        android:drawableBottom="@drawable/login_bottom_line"
        android:paddingLeft="3dip"
        android:paddingRight="3dip"
        android:drawablePadding="21dip"
        android:hint="@string/register_hint_inputpwd"
        android:textCursorDrawable="@drawable/textcusor_drawable"
        android:background="@color/common_bg_white"
        android:textColor="@color/login_textcolor_gray"
        android:textColorHint="@color/login_textcolorhint_gray"
        android:maxLines="1"
        android:maxLength="16"
        android:minEms="3"
        android:gravity="center"
        android:inputType="textPassword"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/login_textcolorhint_gray"
        android:layout_marginTop="22dip"
        android:layout_marginBottom="21dip"/>
    <EditText
        android:id="@+id/register_edt_repwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="44px"
        android:drawableBottom="@drawable/login_bottom_line"
        android:paddingLeft="3dip"
        android:paddingRight="3dip"
        android:drawablePadding="21dip"
        android:hint="@string/register_hint_reinputpwd"
        android:textCursorDrawable="@drawable/textcusor_drawable"
        android:background="@color/common_bg_white"
        android:textColor="@color/login_textcolor_gray"
        android:textColorHint="@color/login_textcolorhint_gray"
        android:maxLines="1"
        android:maxLength="16"
        android:minEms="3"
        android:gravity="center"
        android:inputType="textPassword"
        android:layout_marginBottom="39dip"
        />
    <include
        layout="@layout/next_btn_layout"/>

</TableLayout>