<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:gravity="center_vertical"
    android:layout_marginLeft="25dip"
    android:layout_marginRight="25dip"
    >

    <EditText
        android:id="@+id/register__edt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_hint_fillphone"
        android:textSize="18sp"
        android:textCursorDrawable="@null"
        android:background="@null"
        android:drawableBottom="@drawable/login_bottom_line"
        android:textColor="@color/login_textcolor_gray"
        android:textColorHint="@color/login_textcolorhint_gray"
        android:minHeight="45dip"
        android:maxLines="1"
        android:maxLength="11"
        android:inputType="phone"
        android:minEms="3"
        />
    <TableRow
        android:layout_marginTop="10dip"
        android:layout_marginBottom="40dip"
        android:gravity="center_vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <EditText
                android:id="@+id/register__edt_identfycode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/register_hint_identfycode"
                android:textSize="18sp"
                android:textCursorDrawable="@null"
                android:background="@null"
                android:drawableBottom="@drawable/login_bottom_line"
                android:textColor="@color/login_textcolor_gray"
                android:textColorHint="@color/login_textcolorhint_gray"
                android:maxLines="1"
                android:minHeight="45dip"
                android:maxLength="11"

                android:minEms="3"/>
            <View
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:background="@color/login_textcolor_gray"
                android:layout_marginRight="10dip"
                android:layout_marginLeft="10dip"/>

            <Button
                android:padding="5dip"
                android:id="@+id/register_btn_sendidentfycode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_text_sendidentfycode"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:onClick="onSendIdentCode"
                android:layout_weight="1"
                android:background="@drawable/login_btn_style_selector"/>
        </LinearLayout>
    </TableRow>
    <include
        layout="@layout/next_btn_layout"
        />
</TableLayout>
